--- a/public/help/index.html
+++ b/public/help/index.html
@@ -25,6 +25,10 @@
   <link rel="apple-touch-icon" href="/src/images/icons/app-icon-144x144.png" sizes="144x144">
   <link rel="apple-touch-icon" href="/src/images/icons/app-icon-152x152.png" sizes="152x152">
   <link rel="apple-touch-icon" href="/src/images/icons/app-icon-180x180.png" sizes="180x180">
+  <!-- Meta tags for Edge -->
+  <meta name="msapplication-TileImage" content="/src/images/icons/app-icon-144x144.png">
+  <meta name="msapplication-Tilecolor" content="#fff">
+  <meta name="theme-color" content="#3f51b5">
 </head>
 <body>
 
